# nix-config

./: .envrc  .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  PENDING.md  README.md  default.nix  flake.nix  install-ali-desktop.sh  justfile
docs/: ali-desktop-fix-broken-nix-store.md  spec-kit-setup.md
flake-modules/: ami-images.nix  ami-tests.nix  darwin-configurations-option.nix  darwin-modules.nix  default.nix  deploy.nix  dev-shells.nix  emulation-checks.nix  formatter.nix  hetzner-cilium-bootstrap.yaml  hetzner-images.nix  hetzner-prepull-images.json  hetzner-script-tests.nix  hetzner-tests.nix  home-modules.nix  karpenter-prepull-images.json  karpenter-prepull-images.txt  lib.nix  minecraft-images.nix  niks3-backfill-tests.nix  nixos-modules.nix  overlays.nix  packages.nix  ripping.nix  templates.nix
home/: environmentVariables.nix  home-common.nix  home-linux.nix  home-macos.nix  home.nix  shellAliases.nix
hosts/: default.nix
k8s-setup/: cilium-helm-install.sh  cilium-hr.yaml  cilium-ip-pool.yaml  cilium-values.yaml  kustomization.yaml
lib/: amazon-btrfs-image.nix  amazon-repart-image.nix  containerd-prepopulate.nix  hetzner-node-heal.sh  hetzner-node-services.nix  hetzner-repart-image.nix  make-btrfs-ami-image.nix
modules/: audio-context-suspend.nix  initrd-ssh.nix  luks-controller-unlock.nix
nixos/: configuration.nix  hardware-configuration.nix
overlays/: default.nix
patches/: bubblewrap-allow-caps.patch
pkgs/: default.nix  flake.nix
templates/rust-lambda/: Cargo.toml  flake.nix
templates/rust-lambda/.github/workflows/: ci.yaml
(+823 files in other folders)
