[package]
name = "my-lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_runtime = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
